@@ -1,3 +1,9 @@
+Fri Jul 23 13:54:46 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/tools/Convert_Plan/Convert_Plan.cpp:
+
+          Compile fix.
+
 Fri Jul 23 08:25:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * MPC/config/dds4ccm.mpb:
